2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Trailing whitespace after the
	cursor when inserting a new line will no longer copy additional
	whitespace into the next line.

2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Fixed index out of range
	exception when attempting to add a new line to the
	beginning of a file.

2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs: Refactored code relating to auto
	indentation - making it more maintainable/extensible for the
	future in addition to fixing various indentation errors under
	certain circumstances.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: fixed 'Bug 447040 - Error in text editor
	extension chain (new case)'.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CTextEditorExtension.cs: Fix Bug 446207 - [Regression] C
	auto-formatting screws up.

2008-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Allow running C projects.

	* Makefile.am: Fix parallel build issues.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.addin.xml: Bump MD version.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs:
	* Gui/CTextEditorExtension.cs: Track APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track CompletionData API.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track API.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/CProject.cs: Track API.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/DataProvider.cs: implemented IComparable.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/DataProvider.cs: Track api changes.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
