@@ -127,6 +127,7 @@
     <File name="Gui/PackageDetails.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/CBinding.PackageDetails.cs" subtype="Code" buildaction="Compile" />
     <File name="md1format.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
