@@ -1,0 +1,9 @@
+// Autogenerated from CBinding.addin.xml
+
+using System.Reflection;
+
+[assembly: AssemblyProduct ("MonoDevelop")]
+[assembly: AssemblyTitle ("C/C++ Language Binding")]
+[assembly: AssemblyCopyright ("MIT X11")]
+[assembly: AssemblyVersion ("1.9.1")]
+[assembly: AssemblyDescription ("C/C++ Language binding")]
