@@ -1,3 +1,10 @@
+2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile.am:
+	* CBinding.mdp:
+	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
+	the addin manifests.
+
 2008-11-23  Mitchell Wheeler  <mitchell.wheeler@gmail.com>
 
 	* Gui/CTextEditorExtension.cs: Trailing whitespace after the
